--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^2.0.14",
+    "@loadable/component": "^5.15.2",
     "@react-spring/parallax": "^9.5.5",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
@@ -17,13 +20,15 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "localforage": "^1.10.0",
-    "next": "^13.0.4",
+    "next": "^13.1.1",
     "node-fetch": "^3.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@types/loadable__component": "^5.13.4",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
