--- a/package.json
+++ b/package.json
@@ -13,21 +13,39 @@
     "@heroicons/react": "^2.0.14",
     "@loadable/component": "^5.15.2",
     "@react-spring/parallax": "^9.5.5",
+    "@react-three/drei": "^9.48.1",
+    "@react-three/fiber": "^8.10.4",
+    "@react-three/postprocessing": "^2.7.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/three": "^0.149.0",
+    "add": "^2.0.6",
     "discord-api-types": "^0.37.19",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "gif-cropper-resizer-browser": "^1.0.0",
+    "gifwrap": "^0.10.1",
+    "jimp": "0.16.1",
+    "lamina": "^1.1.23",
     "localforage": "^1.10.0",
-    "next": "^13.1.1",
+    "mongodb": "^5.0.0",
+    "net": "^1.0.2",
+    "next": "^12.2.2",
     "node-fetch": "^3.3.0",
     "react": "18.2.0",
+    "react-confetti-explosion": "^2.0.1",
     "react-dom": "18.2.0",
+    "react-easy-crop": "^4.6.3",
     "react-icons": "^4.7.1",
-    "typescript": "4.9.3"
+    "react-image-crop": "^10.0.9",
+    "react-parallax-tilt": "^1.7.99",
+    "three": "0.148",
+    "typescript": "4.9.3",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@types/jimp": "^0.2.28",
     "@types/loadable__component": "^5.13.4",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
