--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "net": "^1.0.2",
     "next": "^12.2.2",
     "node-fetch": "^3.3.0",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-confetti-explosion": "^2.0.1",
     "react-dom": "18.2.0",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@types/jimp": "^0.2.28",
     "@types/loadable__component": "^5.13.4",
+    "@types/nprogress": "^0.2.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
