--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/drei": "^9.48.1",
     "@react-three/fiber": "^8.10.4",
     "@react-three/postprocessing": "^2.7.0",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
