--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.0.14",
     "@loadable/component": "^5.15.2",
     "@react-spring/parallax": "^9.5.5",
+    "@react-spring/three": "^9.7.2",
     "@react-three/drei": "^9.48.1",
     "@react-three/fiber": "^8.10.4",
     "@react-three/postprocessing": "^2.7.0",
@@ -28,6 +29,7 @@
     "discord-api-types": "^0.37.19",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "extract-colors": "^3.0.0",
     "gif-cropper-resizer-browser": "^1.0.0",
     "gifwrap": "^0.10.1",
     "jimp": "0.16.1",
